unpackaged/main/default/objects/ChampifyIo__Champify_Configuration__mdt/ChampifyIo__Champify_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Champify Configuration</label>
    <pluralLabel>Champify Configurations</pluralLabel>
</CustomObject>