unpackaged/main/default/objects/ChampifyIo__Champify_Configuration__mdt/fields/ChampifyIo__Client_Id__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Client_Id__c</fullName>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>