unpackaged/main/default/objects/ChampifyIo__Champify_Configuration__mdt/fields/ChampifyIo__Ledger_Id__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Ledger_Id__c</fullName>
    <label>Ledger Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>